--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,10 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+!debug.log
+/debug.bar
+log[0-7].foo
+logs/**/debug.log
 
 ### STS ###
 .apt_generated
@@ -18,6 +22,7 @@ target/
 *.iws
 *.iml
 *.ipr
+*.log
 
 ### NetBeans ###
 /nbproject/private/
@@ -31,3 +36,7 @@ build/
 
 ### VS Code ###
 .vscode/
+
+
+
+
