--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,6 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
-!debug.log
-/debug.bar
-log[0-7].foo
-logs/**/debug.log
 
 ### STS ###
 .apt_generated
@@ -22,7 +18,6 @@ logs/**/debug.log
 *.iws
 *.iml
 *.ipr
-*.log
 
 ### NetBeans ###
 /nbproject/private/
@@ -37,6 +32,9 @@ build/
 ### VS Code ###
 .vscode/
 
-
-
-
+*.xml
+*.cmd
+*.config
+*.jar
+*.class
+*.DS_Store
