--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,6 @@
-*.class
-*.log
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-hs_err_pid*
-out/
+HELP.md
 target/
-!.mvn/wrapper/maven-wrapper.jar
+###!.mvn/wrapper/maven-wrapper.jar###
 !**/src/main/**/target/
 !**/src/test/**/target/
 
@@ -29,6 +19,16 @@ target/
 *.iml
 *.ipr
 
+mvnw.cmd
+mvnw
+checkstyle.xml
+lombok.config
+suppressions.xml
+.mvn
+*.class
+*.jar
+*.DS_Store
+
 ### NetBeans ###
 /nbproject/private/
 /nbbuild/
@@ -41,6 +41,3 @@ build/
 
 ### VS Code ###
 .vscode/
-
-*.db
-db/*
