--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,5 @@ spring.datasource.url=jdbc:h2:file:./db/filmorate
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
-spring.jackson.serialization.write-durations-as-timestamps=true
+#spring.jackson.serialization.write-durations-as-timestamps=true
+#logging.level.ru.yandex.practicum.filmorate=debug
