--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,33 @@
 HELP.md
+*.mv.db
+*.trace.db
+*.class
+*.db
+*.log
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+mvn
+*.idea
+*.DS_Store
+checkstyle.xml
+api-tests.yml
+hs_err_pid*
+out/
 target/
 ###!.mvn/wrapper/maven-wrapper.jar###
 !**/src/main/**/target/
 !**/src/test/**/target/
 
+!.mvn/wrapper/maven-wrapper.jar
 ### STS ###
 .apt_generated
 .classpath
-.factorypath
-.project
+@@ -12,23 +27,11 @@ target/
 .settings
 .springBeans
 .sts4-cache
@@ -32,12 +51,8 @@ suppressions.xml
 ### NetBeans ###
 /nbproject/private/
 /nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
-build/
-!**/src/main/**/build/
-!**/src/test/**/build/
+@@ -41,3 +44,4 @@ build/
 
 ### VS Code ###
 .vscode/
+HELP.md
